[package]
name = "robotreboot"
version = "0.1.0"
authors = ["Simon Auch <auchsimon@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
curl = "*"
chrono = "*"
enum-map = "*"